Bug 104640 - [GTK] REGRESSION(r135620): Accelerated Compositing does not draw some pages.
Summary: [GTK] REGRESSION(r135620): Accelerated Compositing does not draw some pages.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Dongseong Hwang
URL:
Keywords:
Depends on: 103046
Blocks: 103366 104672
  Show dependency treegraph
 
Reported: 2012-12-10 23:47 PST by Dongseong Hwang
Modified: 2012-12-11 14:37 PST (History)
3 users (show)

See Also:


Attachments
Patch (1.96 KB, patch)
2012-12-10 23:56 PST, Dongseong Hwang
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dongseong Hwang 2012-12-10 23:47:37 PST
After r135620, Accelerated Compositing does not draw some pages, because r135620 changes the tree-traversal.
Before r135620, we returned early if TextureMapperLayer can not gain TextureMapper from the root layer. However, after r135620, we run the tree-traversal even if TextureMapperLayer can not gain TextureMapper.
This patch makes TextureMapperLayer return early like code before r135620.
Comment 1 Dongseong Hwang 2012-12-10 23:56:54 PST
Created attachment 178734 [details]
Patch
Comment 2 WebKit Review Bot 2012-12-11 14:37:46 PST
Comment on attachment 178734 [details]
Patch

Clearing flags on attachment: 178734

Committed r137362: <http://trac.webkit.org/changeset/137362>
Comment 3 WebKit Review Bot 2012-12-11 14:37:49 PST
All reviewed patches have been landed.  Closing bug.