[GTK] REGRESSION(r135620): Accelerated Compositing does not draw some pages. https://bugs.webkit.org/show_bug.cgi?id=104640

Patch by Huang Dongsung <luxtella@company100.net> on 2012-12-11
Reviewed by Noam Rosenthal.

After r135620, Accelerated Compositing does not draw some pages, because
r135620 changes the tree-traversal behavior.  Before r135620, we
returned early if TextureMapperLayer can not get TextureMapper from the
root layer. However, after r135620, we run the tree-traversal even if
TextureMapperLayer can not get TextureMapper.  This patch makes
TextureMapperLayer return early like code before r135620.

Covered by existing tests.

* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::flushCompositingState):

Canonical link: https://commits.webkit.org/122917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137362 268f45cc-cd09-0410-ab3c-d52691b4dbfc